examples/compiler_errors/row_effects/unresolved_row_subtract_single_e419.flx
// expect: compile_error
// expect-error: E419

fn unresolved(x: Int) -> Int with |e - IO {
    x
}

fn main() -> Unit {
    let _ = unresolved(1)
}
